feat(authentication): login route now redirect on frontend with token in cookies
