# swagger-spec.yaml
@@ -1,27 +1,31 @@
 openapi: 3.1.0
 paths:
-  /authentication/exchange-code/{code}:
-    post:
-      operationId: authenticationExchangeCode
+  /authentication/login:
+    get:
+      operationId: authenticationLogin
       parameters:
         - name: code
           required: true
-          in: path
+          in: query
           schema:
             type: string
       responses:
-        '201':
+        '200':
+          description: ''
+      summary: ''
+      tags: &a1
+        - Authentication
+  /authentication/me:
+    get:
+      operationId: authenticationGetMe
+      parameters: []
+      responses:
+        '200':
           description: ''
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AuthenticationExchangeCodeResponseDto'
-        '400':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AuthenticationExchangeCodeBadRequestResponseDto'
+                $ref: '#/components/schemas/AuthenticateUserOkDto'
         '403':
           description: ''
           content:
@@ -34,9 +38,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerErrorResponseDto'
+      security:
+        - defaultBearerAuth: []
       summary: ''
-      tags: &a1
-        - Authentication
+      tags: *a1
   /authentication/revoke-token:
     delete:
       operationId: authenticationRevokeToken
@@ -62,7 +67,7 @@ paths:
       tags: *a1
   /tournament:
     get:
-      operationId: tournamentFindAll
+      operationId: tournamentGetAll
       parameters:
         - name: itemsPerPage
           required: false
@@ -136,7 +141,7 @@ paths:
       tags: *a2
   /tournament/{id}:
     get:
-      operationId: tournamentFindOne
+      operationId: tournamentGetOneById
       parameters:
         - name: id
           required: true
@@ -171,7 +176,7 @@ paths:
       summary: ''
       tags: *a2
     delete:
-      operationId: tournamentRemove
+      operationId: tournamentRemoveById
       parameters:
         - name: id
           required: true
@@ -239,43 +244,31 @@ components:
             name:
               type: string
               required: true
-        token:
-          type: object
-          properties:
-            type:
-              type: string
-              required: true
-            access_token:
-              type: string
-              required: true
       required:
         - discord
         - riot
-        - token
-    AuthenticationExchangeCodeResponseDto:
+    AuthenticateUserOkDto:
       type: object
       properties:
         statusCode:
           type: number
-          example: 201
+          example: 200
         message:
           type: string
-          example: Code exchange sucessfully
+          example: Authenticate user fetch sucessfully
         data:
           example:
-            discord:
-              id: '123456789012345678'
-              username: test
-              avatar: '12345678901234567890122345678912'
-              global_name: Test
-            riot:
-              id: '123456789012345678901234567890123456789012345678901234567890123456789012345678'
-              name: Test#EUW
-            token:
-              type: Bearer
-              access_token: EzaSJRlojeSh1FQ5YuIfOsJkr9RMxE
-          allOf:
-            - $ref: '#/components/schemas/AuthenticateUserDto'
+            - discord:
+                id: '123456789012345678'
+                username: test
+                avatar: '12345678901234567890122345678912'
+                global_name: Test
+              riot:
+                id: '123456789012345678901234567890123456789012345678901234567890123456789012345678'
+                name: Test#EUW
+          type: array
+          items:
+            $ref: '#/components/schemas/AuthenticateUserDto'
         meta:
           type: object
       required:
@@ -283,25 +276,6 @@ components:
         - message
         - data
         - meta
-    AuthenticationExchangeCodeBadRequestResponseDto:
-      type: object
-      properties:
-        statusCode:
-          type: number
-          example: 400
-        error:
-          type: object
-          properties:
-            message:
-              oneOf:
-                - type: string
-                - type: array
-                  items:
-                    type: string
-              example: Code malformed
-      required:
-        - statusCode
-        - error
     ForbiddenResponseDto:
       type: object
       properties:
